--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "jobreadyforyou",
   "private": true,
   "type": "module",
-  "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc"
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "deploy": "gh-pages -d build/client"
+},
+"homepage": "https://sonalsingh3498.github.io/jobreadyforyou/",
+
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-router/node": "^7.5.3",
     "@react-router/serve": "^7.5.3",
+    "gh-pages": "^6.3.0",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
