--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "jobreadyforyou",
   "private": true,
   "type": "module",
- "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview",
-  "deploy": "gh-pages -d build/client"
-},
-"homepage": "https://sonalsingh3498.github.io/jobreadyforyou/",
-
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build/client"
+  },
+  "homepage": "https://sonalsingh3498.github.io/jobreadyforyou/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@react-router/node": "^7.5.3",
@@ -19,14 +18,15 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router": "^7.5.3"
+    "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.6.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
